--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,7 @@
   font-size: 46px;
   color: var(--primary-color);
   font-weight: 800;
-  animation: fromTop 1s ease-in;
+  animation: fromTop .5s ease-in;
 }
 
 @media screen and (max-width: 500px) {
@@ -65,7 +65,7 @@
   font-size: 16px;
   color: #2a2a2e;
   font-weight: 500;
-  animation: fromTop 1s ease-out;
+  animation: fromTop .5s ease-out;
 }
 
 .links-container {
@@ -73,7 +73,7 @@
   gap: 20px;
   margin-top: 15px;
   transition: 1s;
-  animation: fromTop 1s ease-in-out;
+  animation: fromTop .5s ease-in-out;
 }
 
 @keyframes fromTop {
